infrastructure/storage/longhorn/ingress-longhorn-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-tailscale
  namespace: storage
  annotations:
    tailscale.com/proxy-group: homelab-ingress
spec:
  ingressClassName: tailscale
  rules:
    - host: longhorn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - longhorn
